--- a/2.html
+++ b/2.html
@@ -34,7 +34,7 @@
             RAM RAM BHAI🙏 <br> kuch nahi hai yaha aapke liye 
 <br>majak tha aap ja sakte hai <br> sorry🙂
             <br>
-            <a href="1.html" class="button">BACK</a>
+            <a href="index.html" class="button">BACK</a>
         </div>
     </body>
     </html>
