--- a/yes.html
+++ b/yes.html
@@ -59,7 +59,7 @@
         </div>
         <div id="teddy">
             OMG🫠You convinced!!!😍😘 ^_^<br>
-            <img src="C:\Users\Ranvijay\OneDrive\Desktop\q.gif" alt="Cute Teddy"><br>I can't wait anymore😆😀
+            <img src="q.gif" alt="Cute Teddy"><br>I can't wait anymore😆😀
             DM me ;)<br>
             insta id - @ranvijaysingh0604<br>
             love you >33<br>
