--- a/yes.html
+++ b/yes.html
@@ -54,16 +54,10 @@
         <div id="question">WHY WERE YOU STALKING MY PROFILE🤨🙄<br>
             Do you like me?🤔
             <br>
-            <span class="button" id="yes">Yes</span>
+            <span class="button" id="yes"><a href="4.html>Yes</span>
             <span class="button" id="no">No</span>
         </div>
-        <div id="teddy">
-            OMG🫠You convinced!!!😍😘 ^_^<br>
-            <img src="q.gif" alt="Cute Teddy"><br>I can't wait anymore😆😀
-            DM me ;)<br>
-            insta id - @ranvijaysingh0604<br>
-            love you >33<br>
-        </div>
+        
     </body>
     </html>
   
