--- a/yes.html
+++ b/yes.html
@@ -54,7 +54,7 @@
         <div id="question">WHY WERE YOU STALKING MY PROFILE🤨🙄<br>
             Do you like me?🤔
             <br>
-            <span class="button" id="yes"><a href="4.html>Yes</span>
+            <span class="button" id="yes"><a href="4.html>Yes</a></span>
             <span class="button" id="no">No</span>
         </div>
         
