--- a/yes.html
+++ b/yes.html
@@ -57,6 +57,13 @@
             <a href="4.html"><span class="button" id="yes">Yes</span></a>
             <span class="button" id="no">No</span>
         </div>
+	    <div id="teddy">
+            OMG🫠You convinced!!!😍😘 ^_^<br>
+            <img src="q.gif" alt="Cute Teddy"><br>I can't wait anymore😆😀
+            DM me ;)<br>
+            insta id - @ranvijaysingh0604<br>
+            love you >33<br>
+        </div>
         
     </body>
     </html>
