--- a/yes.html
+++ b/yes.html
@@ -54,7 +54,7 @@
         <div id="question">WHY WERE YOU STALKING MY PROFILE🤨🙄<br>
             Do you like me?🤔
             <br>
-            <a href="4.html"><span class="button" id="yes">Yes</span></a>
+           <span class="button" id="yes">Yes</span>
             <span class="button" id="no">No</span>
         </div>
 	    <div id="teddy">
