--- a/yes.html
+++ b/yes.html
@@ -51,7 +51,7 @@
         </script>
     </head>
     <body>
-        <div id="question">WHY WERE YOU STALKING MY PROFILE🤨🙄<br>
+        <div id="question">hi YOU STALKING MY PROFILE🤨🙄<br>
             Do you like me?🤔
             <br>
            <span class="button" id="yes">Yes</span>
