--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
         </style>
     </head>
     <body>
-        <div id="question">HELLOOO...!<br> a simple question for you<br><br><br>
-            ARE YOU A?
+        <div id="question">HELLOOO...!<br> <br><br><br>
+            i want to tell you something...
             <br>
-            <a href="2.html" class="button">Boy 👦🏻</a>OR
-            <a href="yes.html" class="button">Girl 👧🏼</a>
+        
+            <a href="yes.html" class="button">next</a>
         </div>
     </body>
     </html>
