--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </style>
     </head>
     <body>
-        <div id="question">HELLOOO...!<br> <br><br><br>
+        <div id="question">HELLOOO... PARI!<br> <br><br><br>
             i want to tell you something...
             <br>
         
