--- a/yes.html
+++ b/yes.html
@@ -52,7 +52,7 @@
     </head>
     <body>
         <div id="question">i waited too long for this<br>
-            i like you.. <br> no matter what you think about me or you fell the same thing or not
+            i like you.. <br> no matter what you think about me or you feel the same thing or not
 i just wanted to confess, it is very dificult for me to live like this. <br> so, will you be my gf?
             <br>
            <span class="button" id="yes">Yes</span>
