--- a/yes.html
+++ b/yes.html
@@ -53,7 +53,7 @@
     <body>
         <div id="question">i waited too long for this<br>
             i like you.. <br> no matter what you think about me or you feel the same thing or not
-i just wanted to confess, it is very dificult for me to live like this. <br> so, will you be my gf?
+i just wanted to confess, it is very dificult for me to live like this. <br> so, will you be my FRIEND?<br>bakchodi hai thodi aise hi likh diya hai<br>
             <br>
            <span class="button" id="yes">Yes</span>
             <span class="button" id="no">No</span>
@@ -63,7 +63,7 @@ i just wanted to confess, it is very dificult for me to live like this. <br> so,
             <img src="q.gif" alt="Cute Teddy"><br>I can't wait anymore😆😀
             DM me ;)<br>
             insta id - @ranvijaysingh0604<br>
-            love you >33<br>
+            love you >33<br>ye page maine edit nahi kiya phle se yahi hai to bas ise hi acha bbanaana hai 
         </div>
         
     </body>
