--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </style>
     </head>
     <body>
-        <div id="question">HELLOOO... name (ha wahi jo tu soch raha hai)!<br> <br><br><br>
+        <div id="question">HELLOOO... SANIDHYA LODU (ha wahi jo tu soch raha hai)!<br> <br><br><br>
             i want to tell you something...
             <br>
         
