--- a/yes.html
+++ b/yes.html
@@ -52,8 +52,7 @@
     </head>
     <body>
         <div id="question">i waited too long for this<br>
-            i like you.. <br> no matter what you think about me or you feel the same thing or not
-i just wanted to confess, it is very dificult for me to live like this. <br> so, will you be my FRIEND?<br>bakchodi hai thodi aise hi likh diya hai<br>
+            Hey listen, umm what I am going to say now may be slightly unnerving, maybe well, out of the blue, but I have to say it otherwise I'll regret it later. I like you, Pari. For the past 7 months. \I Know you dont feel the same as me. but i just had to let you know.
             <br>
            <span class="button" id="yes">Yes</span>
             <span class="button" id="no">No</span>
@@ -63,7 +62,7 @@ i just wanted to confess, it is very dificult for me to live like this. <br> so,
             <img src="q.gif" alt="Cute Teddy"><br>I can't wait anymore😆😀
             DM me ;)<br>
             insta id - @ranvijaysingh0604<br>
-            love you >33<br>ye page maine edit nahi kiya phle se yahi hai to bas ise hi acha bbanaana hai 
+            love you >33<br>
         </div>
         
     </body>
